Fix - Width on mobile

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -31,7 +31,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .link {
